<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAccueil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green_accueil"
        android:gravity="center_horizontal"
        android:padding="38dp"
        android:text="@string/accueil_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="18"
        android:gravity="center_horizontal"
        android:hint="@string/nom_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/grey_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccueil" />

    <Button
        android:id="@+id/buttonCommencer"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/green_accueil"
        android:onClick="commencerQuiz"
        android:text="@string/btn_commencer_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageViewSupprimer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:contentDescription="@string/btn_supprimer_description"
        android:focusable="true"
        android:foregroundTintMode="src_atop"
        android:onClick="effacerNom"
        android:tintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>