<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/blue_questions"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewQuestionNb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:outlineProvider="none"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/buttonResponse1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green_responses"
            android:contentDescription="@string/btn_resp1_description"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonResponse2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green_responses"
            android:contentDescription="@string/btn_resp2_description"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonResponse3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green_responses"
            android:contentDescription="@string/btn_resp3_description"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonResponse4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green_responses"
            android:contentDescription="@string/btn_resp4_description"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>